[T260] Migrated external + common (partial work)

--- a/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/pages/tax-list/template/basic-info-tax-list.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/pages/tax-list/template/basic-info-tax-list.html
@@ -20,9 +20,9 @@
 		<tr>
 			<td></td>
 			<td>
-				<center>
+				<span style="text-align:center">
 					<a class="btn btn-xs" (click)="addNewTax()"><i class="fa unitpal-font">'</i> {{ 'Add' || translate }} </a>
-				</center>
+				</span>
 			</td>
 			<td></td>
 		</tr>
