--- a/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
+++ b/assets/client/src/pages/internal/containers/home/pages/home-pages/hotel-operations/operations-modal/components/components/invoice-operations/template/invoice-operations-page.html
@@ -2,7 +2,7 @@
 
 <div class="full-height" *ngIf="didInitOnce">
 	<div class="invoice-container">
-		<center *ngIf="noEditableInvoicesExist" class="full-width"> {{ 'Only unpaid invoices are editable. No unpaid invoices exist in this invoice group.' | translate }} </center>
+		<span style="text-align:center" *ngIf="noEditableInvoicesExist" class="full-width"> {{ 'Only unpaid invoices are editable. No unpaid invoices exist in this invoice group.' | translate }} </span>
 		<invoice-edit *ngFor="let displayedInvoiceIndex of displayedInvoiceIndexList" [invoiceReference]="getInvoiceReference(displayedInvoiceIndex)" (newlyAddedInvoiceRemoved)="newlyAddedInvoiceRemoved($event)"></invoice-edit>
 
 	</div>
