--- a/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
+++ b/assets/client/src/common/utils/components/lazy-loading/template/lazy-loading-table.html
@@ -119,9 +119,9 @@
 			</tr>
 			<tr *ngIf="noResultsExist()" class="lazy-loading-table-last-row">
 				<td class="up-col-100p">
-					<center>
+					<span style="text-align: center">
 						{{ getNoResultsPlaceholder() | translate }}
-					</center>
+					</span>
 				</td>
 			</tr>
 		</tbody>
