--- a/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/pages/tax-modal/template/tax-edit-modal.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/payments-policies/pages/tax-modal/template/tax-edit-modal.html
@@ -47,8 +47,8 @@
 			</div>
 			<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a valid value' | translate }}</small></label>
 		</div>
-		<center>
+		<span style="text-align:center">
 			<loading-button [isLoading]="isLoading" title="Save"></loading-button>
-		</center>
+		</span>
 	</form>
 </div>
