--- a/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-edit/container/template/customer-register-edit-container.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-edit/container/template/customer-register-edit-container.html
@@ -34,9 +34,9 @@
 							<tr *ngFor="let priceProduct of customerVM.priceProductList">
 								<td>{{priceProduct.name}}</td>
 								<td *ngIf="customerVM.getNumberOfAllotmentsForPriceProduct(priceProduct)>0">
-									<center [title]="'You have %noAllotments% allotments on this Price Product. If you want to remove it, archive the allotment first.' | translate:{noAllotments: customerVM.getNumberOfAllotmentsForPriceProduct(priceProduct)}">
+									<span style="text-align:center" [title]="'You have %noAllotments% allotments on this Price Product. If you want to remove it, archive the allotment first.' | translate:{noAllotments: customerVM.getNumberOfAllotmentsForPriceProduct(priceProduct)}">
 										<p>{{customerVM.getNumberOfAllotmentsForPriceProduct(priceProduct)}} <span class="unitpal-font">â</span></p>
-									</center>
+									</span>
 								</td>
 								<td *ngIf="customerVM.getNumberOfAllotmentsForPriceProduct(priceProduct)==0">
 									<a class="btn btn-xs" (click)="removePriceProduct(priceProduct)">
