--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/filters/template/price-product-edit-filters-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/filters/template/price-product-edit-filters-section.html
@@ -7,7 +7,7 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<small class="text-muted" *ngIf="!isPricePerNumberOfPersons">
-				<i class="fa fa-info-circle"></i> {{ 'The filters are used for grouping similar price products. The price products from the same group can be yielded together.' | translate }} 
+				<i class="fa fa-info-circle"></i> {{ 'Attach filters to your Price Products in order to group them. They can then be yielded together in the Yield Manager' | translate }} 
 			</small>
 		</div>
 	</div>
