--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/room-categories/template/price-product-edit-room-categories-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/room-categories/template/price-product-edit-room-categories-section.html
@@ -18,6 +18,6 @@
 			</tr>
 		</tbody>
 		<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Select at least a room category' | translate }}</small></label>
-		<small class="text-muted"><i class="fa fa-info-circle"></i> {{ 'The link between the price product and rooms.' | translate }}</small>
+		<small class="text-muted"><i class="fa fa-info-circle"></i> {{ 'Select which Room Categories this Price Product should include' | translate }}</small>
 	</table>
 </div>
