--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/top-section/template/price-product-edit-top-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/top-section/template/price-product-edit-top-section.html
@@ -17,7 +17,7 @@
 			</button>
 		</div>
 	</div>
-	<small class="text-muted"><i class="fa fa-info-circle"></i>  {{ 'If public, it will be bookable by anyone. If Confidential, you will need to add it from specific customer profiles' | translate }}</small>
+	<small class="text-muted"><i class="fa fa-info-circle"></i>  {{ 'Public is available to anyone. Confidential is only available to selected customers.' | translate }}</small>
 </div>
 <div class="col-md-4 col-xs-12 form-group">
 	<label for="roomname">{{ 'Last Room Availability' | translate }}</label>
@@ -31,5 +31,5 @@
 			</button>
 		</div>
 	</div>
-	<small class="text-muted"><i class="fa fa-info-circle"></i> {{ 'If marked, then the price product will be bookable anytime, not considering the its yielding. Used better with private price products.' | translate }} </small>
+	<small class="text-muted"><i class="fa fa-info-circle"></i> {{ 'If marked Yes, this Price Product will always be available, regardless of the Yield Manager as long as there are rooms left in the Room Category' | translate }} </small>
 </div>
