--- a/assets/client/src/pages/internal/containers/common/basic-info/overview/main/template/basic-info-overview-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/overview/main/template/basic-info-overview-edit.html
@@ -5,7 +5,7 @@
 			<div class="col-xs-12 col-md-6">
 				<div class="row">
 					<div class="col-xs-12 col-md-12 form-group">
-						<label>{{ 'Hotel Name' | translate }}*</label>
+						<label>{{ 'Name' | translate }}*</label>
 						<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('name')}">
 							<input type="text" class="form-control" formControlName="name" />
 						</div>
@@ -28,7 +28,7 @@
 				</div>
 			</div>
 			<div class="col-xs-12 col-md-6 form-group">
-				<label>{{ 'Hotel Logo' | translate }}</label>
+				<label>{{ 'Logo' | translate }}</label>
 				<image-upload [imageUrl]="logoUrl" (onImageUpload)="didUploadLogo($event)"></image-upload>
 			</div>
 		</div>
