--- a/assets/client/src/pages/internal/containers/common/basic-info/property-details/main/template/basic-info-property-details-edit.html
+++ b/assets/client/src/pages/internal/containers/common/basic-info/property-details/main/template/basic-info-property-details-edit.html
@@ -3,7 +3,7 @@
     <div class="row basic-info-form" *ngIf="!isLoading">
         <div class="col-xs-12 col-md-6">
             <label class="control-label">
-            <h3>{{ 'Select the timezone' | translate }}</h3><small>{{ 'This will be used for automatic processes that need to know your local hour' | translate }}</small>
+            <h3>{{ 'Select your time zone' | translate }}</h3><small>{{ 'This will be used for automatic processes that need to know your local hour' | translate }}</small>
         </label>
 
             <div class="form-group">
@@ -45,7 +45,7 @@
                     </th-hour-select>
                 </div>
                 <div class="col-xs-6 col-md-6 form-group">
-                    <label>{{ 'Booking Cancellation Hour' | translate }}*</label>
+                    <label>{{ 'Cancellation hour of not guaranteed bookings' | translate }}*</label>
                     <th-hour-select [initialHour]="hotel.operationHours.cancellationHour" (onHourSelected)="diChangeCancellationHour($event)"
                         [isRequired]="true" errorMessage="{{ 'Required' | translate }}" [didSubmitForm]="didSubmitForm">
                     </th-hour-select>
