--- a/assets/client/src/pages/internal/containers/common/inventory/add-on-products/pages/add-on-product-edit/template/add-on-product-edit.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/add-on-products/pages/add-on-product-edit/template/add-on-product-edit.html
@@ -5,7 +5,7 @@
 			<div class="col-xs-12 col-md-8">
 				<div class="row">
 					<div class="col-xs-12 col-md-12 form-group">
-						<label>{{ 'Product Name' | translate }}*</label>
+						<label>{{ 'Name' | translate }}*</label>
 						<div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('name')}">
 							<input type="text" class="form-control" formControlName="name">
 						</div>
@@ -62,7 +62,7 @@
 				</div>
 			</div>
 			<div class="col-xs-12 col-md-4 form-group">
-				<label>{{ 'Image of the Product' | translate }}</label>
+				<label>{{ 'Image' | translate }}</label>
 				<image-upload [imageUrl]="imageUrl" (onImageUpload)="didUploadImage($event)"></image-upload>
 			</div>
 		</div>
