--- a/assets/client/src/pages/internal/containers/common/inventory/modals/room-categories/template/room-categories-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/modals/room-categories/template/room-categories-modal.html
@@ -1,6 +1,7 @@
 <div class="modal-header text-center">
 	<button type="button" class="close" (click)="closeDialog()">&times;</button>
-	<h4 class="modal-title">{{ 'Select Room Category' | translate }}</h4>
+	<h4 *ngIf="!allowCategoryEdit" class="modal-title">{{ 'Select Room Categories' | translate }}</h4>
+	<h4 *ngIf="allowCategoryEdit" class="modal-title">{{ 'Select Or Add New Room Category' | translate }}</h4>
 </div>
 <div class="modal-body" #scrollableContent>
 	<loading-component [isLoading]="isLoading"></loading-component>
