--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/container/template/price-product-edit-container.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/container/template/price-product-edit-container.html
@@ -43,16 +43,16 @@
 					<div class="row">
 						<div class="col-xs-12">
 							<div class="col-xs-4">
-								<label class="control-label">{{ 'Save as Draft' | translate }}</label>
+								<label class="control-label">{{ 'Save as' | translate }}</label>
 							</div>
 							<div class="col-xs-8">
 								<div class="input-group">
 									<div class="btn-group" data-toggle="buttons">
 										<button class="btn btn-default" (click)="saveAsDraft=true" [ngClass]="{'active': saveAsDraft}">
-										{{ 'Yes' | translate }}
+										{{ 'Draft' | translate }}
 									</button>
 										<button class="btn btn-default" (click)="saveAsDraft=false" [ngClass]="{'active': !saveAsDraft}">
-										{{ 'No' | translate }}
+										{{ 'Active' | translate }}
 									</button>
 									</div>
 								</div>
@@ -62,7 +62,7 @@
 					<div class="row">
 						<div class="col-xs-12">
 							<small class="text-muted" *ngIf="!isPricePerNumberOfPersons">
-							<i class="fa fa-info-circle"></i> {{ 'If selected, you will be able to edit the price product further on. If not, the price product will be automatically activated and available for bookings.' | translate }}
+							<i class="fa fa-info-circle"></i> {{ 'Active Price Products are available for booking, but cannot be edited. Draft Price Products can be edited, but not booked.' | translate }}
 						</small>
 						</div>
 					</div>
