--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/cancellation/template/price-product-edit-cancellation-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/cancellation/template/price-product-edit-cancellation-section.html
@@ -51,7 +51,7 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<small class="text-muted">
-				<i class="fa fa-info-circle"></i> {{ 'Attach penalty on cancellation' | translate }} 
+				<i class="fa fa-info-circle"></i> {{ 'What is the cancellation penalty?' | translate }} 
 			</small>
 		</div>
 		<div class="col-xs-12 form-group">
