--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/constraints/constraints-list/template/price-product-edit-constraints-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/constraints/constraints-list/template/price-product-edit-constraints-section.html
@@ -1,13 +1,13 @@
 <div class="col-md-12">
 	<div class="row">
 		<div class="col-xs-12 form-group">
-			<label>{{ 'Constraints' | translate }}</label>
+			<label>{{ 'Booking constraints' | translate }}</label>
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-xs-12">
 			<small class="text-muted" *ngIf="!isPricePerNumberOfPersons">
-				<i class="fa fa-info-circle"></i> {{ 'Constraints to apply the price product on bookings' | translate }} 
+				<i class="fa fa-info-circle"></i> {{ 'Constraints which must be met when booking the Price Product' | translate }} 
 			</small>
 		</div>
 	</div>
