--- a/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-edit/template/room-edit.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/rooms/pages/room-edit/template/room-edit.html
@@ -5,9 +5,9 @@
             <div class="col-xs-12 col-md-8">
                 <div class="row">
                     <div class="col-xs-12 col-md-6 form-group">
-                        <label>{{ 'Name' | translate }}*</label>
+                        <label>{{ 'Room name/number' | translate }}*</label>
                         <div class="input-group" [ngClass]="{'form-warning': controlIsInvalid('name')}">
-                            <input type="text" class="form-control" formControlName="name">
+                            <input type="text" class="form-control" formControlName="name" placeholder="{{ 'E.g. 101, The Rose Room' | translate }}">
                         </div>
                         <label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Enter a name for the room' | translate }}</small></label>
                     </div>
@@ -69,7 +69,7 @@
             <div class="col-xs-12 col-sm-6 form-group">
                 <div class="row">
                     <div class="col-xs-12 form-group">
-                        <label class="control-label">{{ 'Rollaway Beds' | translate }}</label>
+                        <label class="control-label">{{ 'Moveable beds' | translate }}</label>
                     </div>
                     <div class="col-xs-12">
                         <bed-selector [availableBedList]="allAvailableRollawayBeds" [selectedBedList]="selectedRollawayBeds" [roomCategory]="roomVM.category"
