[T266] Add links on the right for all settings pages

--- a/assets/client/src/pages/internal/containers/common/inventory/add-on-products/main/template/add-on-products.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/add-on-products/main/template/add-on-products.html
@@ -13,6 +13,8 @@
 	<add-on-product-overview 
 		*ngIf="selectedAddOnProductVM && !isEditing" 
 		[addOnProductVM]="selectedAddOnProductVM"
+		(onCopy)="copyAddOnProduct($event)"
+		(onDelete)="deleteAddOnProduct($event)"
 		(onEdit)="editAddOnProduct($event)">
 	</add-on-product-overview>
 	<add-on-product-edit
