--- a/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-overview/template/customer-register-overview.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/customer-register/pages/customer-overview/template/customer-register-overview.html
@@ -29,8 +29,8 @@
 		<i class="fa fa-mail-reply"></i> <small>{{customerVM.emailString}}</small>
 	</div>
 	<div>
-		<a class="btn btn-lg" (click)="editCustomer()">
-			<i class="fa fa-pencil"></i> {{ 'Edit' | translate }}
+		<a class="btn btn-lg p-l-0" (click)="editCustomer()">
+			<i class="fa unitpal-font">]</i> {{ 'Edit' | translate }}
 		</a>
 	</div>
 </div>
