--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/main/template/price-products.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/main/template/price-products.html
@@ -33,6 +33,7 @@
 		(onDelete)="deletePriceProduct($event)"
 		(onArchive)="archivePriceProduct($event)"
 		(onDraft)="draftPriceProduct($event)"
+		(onCopy)="copyPriceProduct($event)"
 		>
 	</price-product-overview>
 	<price-product-edit-container
