--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-overview/template/price-product-overview.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-overview/template/price-product-overview.html
@@ -26,16 +26,19 @@
 		<small>{{priceProductVM.priceProduct.notes}}</small>
 	</div>
 	<div>
-		<a class="btn btn-lg" (click)="editPriceProduct()">
-			<i class="fa fa-pencil"></i> {{ 'Edit' | translate }}
+		<a class="btn btn-lg p-l-0" (click)="copyPriceProduct()">
+			<i class="fa unitpal-font">[</i> {{ 'Copy' | translate }}
 		</a>
-		<a class="btn btn-lg" (click)="deletePriceProduct()" *ngIf="priceProductVM.priceProduct.isDraft()">
+		<a class="btn btn-lg p-l-0" (click)="editPriceProduct()">
+			<i class="fa unitpal-font">]</i> {{ 'Edit' | translate }}
+		</a>
+		<a class="btn btn-lg p-l-0" (click)="deletePriceProduct()" *ngIf="priceProductVM.priceProduct.isDraft()">
 			<i class="fa unitpal-font">\</i> {{ 'Delete' | translate }}
 		</a>
-		<a class="btn btn-lg" (click)="archivePriceProduct()" *ngIf="priceProductVM.priceProduct.isActive()">
+		<a class="btn btn-lg p-l-0" (click)="archivePriceProduct()" *ngIf="priceProductVM.priceProduct.isActive()">
 			<i class="fa fa-archive"></i> {{ 'Archive' | translate }}
 		</a>
-		<a class="btn btn-lg" (click)="draftPriceProduct()" *ngIf="priceProductVM.priceProduct.isArchived()">
+		<a class="btn btn-lg p-l-0" (click)="draftPriceProduct()" *ngIf="priceProductVM.priceProduct.isArchived()">
 			<i class="fa fa-retweet"></i> {{ 'Mark as Draft' | translate }}
 		</a>
 	</div>
