--- a/assets/client/src/pages/internal/containers/common/inventory/rooms/main/template/rooms.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/rooms/main/template/rooms.html
@@ -13,6 +13,8 @@
 		*ngIf="selectedRoomVM && !isEditing" 
 		[showLinkToOperationalModal]="showLinkToOperationalModal"
 		[roomVM]="selectedRoomVM"
+		(onCopy)="copyRoom($event)"
+		(onDelete)="deleteRoom($event)"
 		(onEdit)="editRoom($event)">
 	</room-overview>
 	<room-edit
