--- a/assets/client/src/pages/internal/containers/common/inventory/modals/room-categories/template/room-categories-modal.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/modals/room-categories/template/room-categories-modal.html
@@ -32,13 +32,13 @@
 				
 				<td class="selectable-row operations" *ngIf="allowCategoryEdit" (click)="selectRoomCategory(roomCategoryVM)">
 					<a class="btn btn-xs" *ngIf="!roomCategoryVM.isEditing && !roomCategoryVM.isSaving" (click)="editRoomCategory(roomCategoryVM)">
-						<i class="fa unitpal-font">]</i>
+						<i class="fa unitpal-font">]</i> {{'Edit' | translate}}
 					</a>
 					<a class="btn btn-xs" *ngIf="roomCategoryVM.isEditing && !roomCategoryVM.isSaving" (click)="saveRoomCategory(roomCategoryVM)">
-						<i class="fa fa-save"></i>
+						<i class="fa fa-save"></i> {{'Save' | translate}}
 					</a>
 					<a class="btn btn-xs" *ngIf="roomCategoryVM.isSaving">
-						<i class="fa fa-spinner fa-pulse"></i>
+						<i class="fa fa-spinner fa-pulse"></i> {{'Saving' | translate}}
 					</a>
 				</td>
 			</tr>
