[T266] Added check-in/out details on booking confirmation

--- a/views/reports/booking-confirmation.ejs
+++ b/views/reports/booking-confirmation.ejs
@@ -82,6 +82,7 @@
                         <span style="font-size: 25px;"><b><%= bookingConfirmationVM.checkInDay %></b></span><br>
                         <span style="font-size: 20px;"><b><%= bookingConfirmationVM.checkInMonth %></b></span><br>
                         <span style="font-size: 15px;"><%= bookingConfirmationVM.checkInSOWeekDay %></span><br>
+                        <span style="font-size: 10px;"><%= bookingConfirmationVM.checkInHourDetails %></span><br>
                     </div>
                 </div>
                 <div class="col-md-1" style="text-align: center">
@@ -93,6 +94,7 @@
                         <span style="font-size: 25px;"><b><%= bookingConfirmationVM.checkOutDay %></b></span><br>
                         <span style="font-size: 20px;"><b><%= bookingConfirmationVM.checkOutMonth %></b></span><br>
                         <span style="font-size: 15px;"><%= bookingConfirmationVM.checkOutISOWeekDay %></span><br>
+                        <span style="font-size: 10px;"><%= bookingConfirmationVM.checkOutHourDetails %></span><br>
                     </div>
                 </div>
                 <div class="col-md-5" style="text-align: center">
