--- a/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/prices/template/price-product-edit-prices-section.html
+++ b/assets/client/src/pages/internal/containers/common/inventory/price-products/pages/price-product-edit/sections/prices/template/price-product-edit-prices-section.html
@@ -22,67 +22,79 @@
 
 <div class="col-md-8 col-sm-8 col-xs-12">
 	<loading-component [isLoading]="isLoading"></loading-component>
-	<div class="row form-group" *ngIf="!isLoading">
-		<label>{{ 'Price configuration in %ccySymbol%' | translate:{ccySymbol: ccy.nativeSymbol} }}</label>
+	<div class="row" *ngIf="!isLoading">
+		<div class="col-xs-12 form-group">
+			<label>{{ 'Price configuration in %ccySymbol%' | translate:{ccySymbol: ccy.nativeSymbol} }}</label>
 
-		<div class="row" *ngIf="!isPricePerNumberOfPersons">
-			<div class="col-md-6 col-sm-6 col-xs-12 form-group" *ngFor="let singlePriceVM of singlePriceContainer.singlePriceVMList">
-				<label>{{singlePriceVM.roomCategoryStats.roomCategory.displayName}}</label>
-				<div class="input-group" [ngClass]="{'form-warning': displayError()&&!singlePriceVM.singlePrice.isValid()}">
-					<input type="number" placeholder="{{'Price' | translate}}" class="form-control" [(ngModel)]="singlePriceVM.singlePrice.price" name="singlePrice"
-					[readonly]="readonly" />
+			<div class="row" *ngIf="!isPricePerNumberOfPersons">
+				<div class="col-md-6 col-sm-6 col-xs-12 form-group" *ngFor="let singlePriceVM of singlePriceContainer.singlePriceVMList">
+					<label>{{singlePriceVM.roomCategoryStats.roomCategory.displayName}}
+						<small> 
+							{{ getNoRoomsLabel(singlePriceVM.roomCategoryStats.noOfRooms) }} x
+							<config-capacity [configCapacity]="singlePriceVM.roomCategoryStats.capacity.totalCapacity"></config-capacity>
+						</small>
+					</label>
+					<div class="input-group" [ngClass]="{'form-warning': displayError()&&!singlePriceVM.singlePrice.isValid()}">
+						<input type="number" placeholder="{{'Price' | translate}}" class="form-control" [(ngModel)]="singlePriceVM.singlePrice.price" name="singlePrice"
+						[readonly]="readonly" />
+					</div>
+					<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Invalid Price' | translate }}</small></label>
 				</div>
-				<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Invalid Price' | translate }}</small></label>
 			</div>
-		</div>
-		<div class="row" *ngIf="isPricePerNumberOfPersons">
-			<div class="col-md-12 col-sm-12 col-xs-12 form-group" *ngFor="let pricePerPersonVM of pricePerPersonContainer.pricePerPersonVMList">
-				<label>{{pricePerPersonVM.roomCategoryStats.roomCategory.displayName}}</label>
-				<a class="btn" 
-					*ngIf="pricePerPersonVM.previousRoomCategoryId && !readonly" 
-					(click)="pricePerPersonContainer.copyPrices(pricePerPersonVM.previousRoomCategoryId, pricePerPersonVM.roomCategoryStats.roomCategory.id)">
-					<i class="fa unitpal-font">[</i> <small>{{ 'Copy Prices from Previous Room Category' | translate }}</small>
-				</a>
-				<div class="row">
-					<div class="col-md-6 col-sm-6 col-xs-6">
-						<label><small>{{ 'Price For Adults' | translate }}*</small></label>
-						<div class="row">
-							<div class="col-md-12 col-sm-12 col-xs-12 form-group" *ngFor="let pricePerAdult of pricePerPersonVM.pricePerPerson.adultsPriceList">
-								<div class="input-group" [ngClass]="{'form-warning': displayError()&&!pricePerAdult.isValid()}">
-									<span class="input-group-addon"><small>{{pricePerAdult.noOfPersons}}{{getNumberSuffix(pricePerAdult.noOfPersons)}}</small> <span class="unitpal-font">:</span></span>
-									<input type="number" class="form-control" [(ngModel)]="pricePerAdult.price" name="adultPrice"
-									[readonly]="readonly" />
+			<div class="row" *ngIf="isPricePerNumberOfPersons">
+				<div class="col-md-12 col-sm-12 col-xs-12 form-group" *ngFor="let pricePerPersonVM of pricePerPersonContainer.pricePerPersonVMList">
+					<label>{{pricePerPersonVM.roomCategoryStats.roomCategory.displayName}}
+						<small> 
+							{{ getNoRoomsLabel(pricePerPersonVM.roomCategoryStats.noOfRooms) }} x
+							<config-capacity [configCapacity]="pricePerPersonVM.roomCategoryStats.capacity.totalCapacity"></config-capacity>
+						</small>
+					</label>
+					<a class="btn" 
+						*ngIf="pricePerPersonVM.previousRoomCategoryId && !readonly" 
+						(click)="pricePerPersonContainer.copyPrices(pricePerPersonVM.previousRoomCategoryId, pricePerPersonVM.roomCategoryStats.roomCategory.id)">
+						<i class="fa unitpal-font">[</i> <small>{{ 'Copy Prices from Previous Room Category' | translate }}</small>
+					</a>
+					<div class="row">
+						<div class="col-md-6 col-sm-6 col-xs-6">
+							<label><small>{{ 'Price For Adults' | translate }}*</small></label>
+							<div class="row">
+								<div class="col-md-12 col-sm-12 col-xs-12 form-group" *ngFor="let pricePerAdult of pricePerPersonVM.pricePerPerson.adultsPriceList">
+									<div class="input-group" [ngClass]="{'form-warning': displayError()&&!pricePerAdult.isValid()}">
+										<span class="input-group-addon"><small>{{pricePerAdult.noOfPersons}}{{getNumberSuffix(pricePerAdult.noOfPersons)}}</small> <span class="unitpal-font">:</span></span>
+										<input type="number" class="form-control" [(ngModel)]="pricePerAdult.price" name="adultPrice"
+										[readonly]="readonly" />
+									</div>
+									<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Invalid Price' | translate }}</small></label>
 								</div>
-								<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Invalid Price' | translate }}</small></label>
 							</div>
 						</div>
-					</div>
-					<div class="col-md-6 col-sm-6 col-xs-6">
-						<label><small>{{ 'Price For Children' | translate }}*</small></label>
-						<div class="row">
-							<div class="col-md-12 col-sm-12 col-xs-12" *ngFor="let pricePerChild of pricePerPersonVM.pricePerPerson.childrenPriceList">
-								<div class="row">
-									<div class="col-xs-12 form-group" *ngIf="pricePerChild.noOfPersons === 1">	
-										<div class="input-group" [ngClass]="{'form-warning': displayError()&&!pricePerPersonVM.pricePerPerson.firstChildWithoutAdultPriceIsValid()}">
-											<span class="input-group-addon"><small>1{{getNumberSuffix(1)}}</small> <span class="unitpal-font">;</span></span>
-											<input type="number" class="form-control" [(ngModel)]="pricePerPersonVM.pricePerPerson.firstChildWithoutAdultPrice" name="firstChildPrice"
-											[readonly]="readonly" />
+						<div class="col-md-6 col-sm-6 col-xs-6">
+							<label><small>{{ 'Price For Children' | translate }}*</small></label>
+							<div class="row">
+								<div class="col-md-12 col-sm-12 col-xs-12" *ngFor="let pricePerChild of pricePerPersonVM.pricePerPerson.childrenPriceList">
+									<div class="row">
+										<div class="col-xs-12 form-group" *ngIf="pricePerChild.noOfPersons === 1">	
+											<div class="input-group" [ngClass]="{'form-warning': displayError()&&!pricePerPersonVM.pricePerPerson.firstChildWithoutAdultPriceIsValid()}">
+												<span class="input-group-addon"><small>1{{getNumberSuffix(1)}}</small> <span class="unitpal-font">;</span></span>
+												<input type="number" class="form-control" [(ngModel)]="pricePerPersonVM.pricePerPerson.firstChildWithoutAdultPrice" name="firstChildPrice"
+												[readonly]="readonly" />
+											</div>
+											<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Invalid Price' | translate }}</small></label>
+											<small class="text-muted">
+												<i class="fa fa-info-circle"></i> {{ 'Reservation without adults' | translate }}
+											</small>
 										</div>
-										<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Invalid Price' | translate }}</small></label>
-										<small class="text-muted">
-											<i class="fa fa-info-circle"></i> {{ 'Reservation without adults' | translate }}
-										</small>
-									</div>
-									<div class="col-xs-12 form-group">	
-										<div class="input-group" [ngClass]="{'form-warning': displayError()&&!pricePerChild.isValid()}">
-											<span class="input-group-addon"><small>{{pricePerChild.noOfPersons}}{{getNumberSuffix(pricePerChild.noOfPersons)}}</small> <span class="unitpal-font">;</span></span>
-											<input type="number" class="form-control" [(ngModel)]="pricePerChild.price" name="childPrice"
-											[readonly]="readonly" />
+										<div class="col-xs-12 form-group" *ngIf="!roomCategoryHasOnlyOneAdultAndZeroChildren(pricePerPersonVM.roomCategoryStats)">	
+											<div class="input-group" [ngClass]="{'form-warning': displayError()&&!pricePerChild.isValid()}">
+												<span class="input-group-addon"><small>{{pricePerChild.noOfPersons}}{{getNumberSuffix(pricePerChild.noOfPersons)}}</small> <span class="unitpal-font">;</span></span>
+												<input type="number" class="form-control" [(ngModel)]="pricePerChild.price" name="childPrice"
+												[readonly]="readonly" />
+											</div>
+											<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Invalid Price' | translate }}</small></label>
+											<small class="text-muted" *ngIf="pricePerChild.noOfPersons === 1">
+												<i class="fa fa-info-circle"></i>  {{ 'Reservation with at least one adult' | translate }}
+											</small>
 										</div>
-										<label class="form-warning"><small><i class="fa fa-info-circle"></i> {{ 'Invalid Price' | translate }}</small></label>
-										<small class="text-muted" *ngIf="pricePerChild.noOfPersons === 1">
-											<i class="fa fa-info-circle"></i>  {{ 'Reservation with at least one adult' | translate }}
-										</small>
 									</div>
 								</div>
 							</div>
