[T278] enforce individual billing selection (when no PIA on company/TA)

--- a/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-fill-details/components/template/new-booking-details-editor.html
+++ b/assets/client/src/pages/internal/containers/home/pages/utils/new-booking/component/subcomponents/booking-fill-details/components/template/new-booking-details-editor.html
@@ -53,7 +53,7 @@
                         <td width="50%" class="booking-details-action-description">{{ customer.customerName }}</td>
                         <td width="50%">
                             <!-- Change customer -->
-                            <span *ngIf="(isBilledCustomer(customer) && bookingCartItem.canChangeDefaultBilledCustomer) || !isBilledCustomer(customer)"
+                            <span *ngIf="!bookingCartItem.isInitialCustomer(customer)"
                                 (click)="changeCustomer(customer)">
                                 <span class="booking-details-action-button input-group-addon th-addon-button"> 
                                     <i class="fa unitpal-font">(</i>  {{ 'Change' | translate }}
@@ -64,13 +64,13 @@
                             <span *ngIf="isBilledCustomer(customer)" title="{{'The invoice will be generated with this customer' | translate}}" class="booking-details-action-button booking-details-action-readonly-button">
                                 {{ 'Billed To' | translate }}  <i class="fa unitpal-font">D</i>
                             </span>
-                            <span *ngIf="!isBilledCustomer(customer) && canBeBilledCustomer(customer) && bookingCartItem.canChangeDefaultBilledCustomer" title="{{'Generate the bill with this customer' | translate}}"
+                            <span *ngIf="!isBilledCustomer(customer) && canBeBilledCustomer(customer)" title="{{'Generate the bill with this customer' | translate}}"
                                 (click)="updateBilledCustomerFromTemplate(customer)">
                                 <span class="booking-details-action-button input-group-addon th-addon-button"> 
                                     {{ 'Bill' | translate }}  <i class="fa unitpal-font">D</i>
                                 </span>
                             </span>
-                            <span  *ngIf="!isBilledCustomer(customer) && !canBeBilledCustomer(customer) && bookingCartItem.canChangeDefaultBilledCustomer">
+                            <span  *ngIf="!isBilledCustomer(customer) && !canBeBilledCustomer(customer)">
                                 <span class="booking-details-action-button booking-details-action-readonly-button">
                                     <i>{{ 'No access to bill' | translate }}</i>
                                 </span>
